more portable to URL conversion reviewed by Jiangli Zhou